# supersigil

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  LICENSE-MIT  README.md  ROADMAP.md  cliff.editor.toml  cliff.intellij.toml  cliff.toml  cog.toml  deny.toml  eslint.config.js  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-targets.json  supersigil-design.md  supersigil.toml
crates/supersigil-cli/: Cargo.toml  README.md
crates/supersigil-cli/specs/authoring-commands/: authoring-commands.design.md  authoring-commands.design.mdx  authoring-commands.req.md  authoring-commands.req.mdx  authoring-commands.tasks.md  authoring-commands.tasks.mdx
crates/supersigil-cli/specs/cli-runtime/: cli-runtime.design.md  cli-runtime.design.mdx  cli-runtime.req.md  cli-runtime.req.mdx  cli-runtime.tasks.md  cli-runtime.tasks.mdx
crates/supersigil-cli/specs/inventory-queries/: inventory-queries.design.md  inventory-queries.design.mdx  inventory-queries.req.md  inventory-queries.req.mdx  inventory-queries.tasks.md  inventory-queries.tasks.mdx
crates/supersigil-cli/specs/skills-install/: skills-install.design.md  skills-install.design.mdx  skills-install.req.md  skills-install.req.mdx  skills-install.tasks.md  skills-install.tasks.mdx
crates/supersigil-cli/specs/work-queries/: work-queries.design.md  work-queries.design.mdx  work-queries.req.md  work-queries.req.mdx  work-queries.tasks.md  work-queries.tasks.mdx
crates/supersigil-cli/src/: commands.rs  discover.rs  error.rs  format.rs  lib.rs  loader.rs  main.rs  plugins.rs  prompt.rs  scope.rs  skills.rs
crates/supersigil-cli/src/commands/: affected.rs  completions.rs  context.rs  examples.rs  explore.rs  explore_standalone.js  explore_template.html  export.rs  graph.rs  import.rs  init.rs  lint.rs  ls.rs  new.rs  plan.rs  refs.rs  render.rs  schema.rs  skills.rs  status.rs  verify.rs
crates/supersigil-cli/tests/: clap_parse.rs  cmd_completions.rs  cmd_context.rs  cmd_examples.rs  cmd_export.rs  cmd_import.rs  cmd_init.rs  cmd_lint.rs  cmd_ls.rs  cmd_new.rs  cmd_plan.rs  cmd_render.rs  cmd_schema.rs  cmd_skills.rs  cmd_status.rs  cmd_verify.rs  color_resolution.rs  discover.rs  example_e2e_test.rs  loader.rs  smoke.rs
crates/supersigil-cli/tests/cmd_verify/: examples.rs  flags.rs  plugins.rs  projects.rs
crates/supersigil-cli/tests/common/: mod.rs
crates/supersigil-core/: Cargo.toml  README.md
crates/supersigil-core/specs/config/: config.design.md  config.design.mdx  config.req.md  config.req.mdx
crates/supersigil-core/specs/document-graph/: document-graph.adr.md  document-graph.adr.mdx  document-graph.design.md  document-graph.design.mdx  document-graph.req.md  document-graph.req.mdx
crates/supersigil-core/src/: component_defs.rs  config.rs  error.rs  glob_util.rs  graph.rs  lib.rs  locate.rs  refs.rs  rust_scope.rs  rust_validation_inputs.rs  scaffold.rs  test_helpers.rs  types.rs  xml.rs
crates/supersigil-core/src/graph/: cycle.rs  error.rs  index.rs  query.rs  resolve.rs  reverse.rs  tests.rs  topo.rs
crates/supersigil-core/tests/: component_defs_unit_tests.rs  config_deserialization_tests.rs  config_ecosystem_tests.rs  config_feature_tests.rs  config_property_tests.proptest-regressions  config_property_tests.rs  config_unit_tests.rs  config_validation_tests.rs  list_split_property_tests.rs  list_split_unit_tests.rs  serialize_roundtrip.rs
crates/supersigil-evidence/: Cargo.toml  README.md
crates/supersigil-evidence/src/: lib.rs  plugin.rs  provenance.rs  repository.rs  tests.rs  types.rs
crates/supersigil-import/: Cargo.toml  README.md
crates/supersigil-import/examples/: check_dup_crit.rs
crates/supersigil-import/src/: check.rs  discover.rs  emit.rs  ids.rs  lib.rs  parse.rs  refs.rs  write.rs
crates/supersigil-import/tests/: e2e_pipeline.rs  edge_case_tests.rs  feature_tests.rs  generators.rs  prop_edge.rs  prop_emit.proptest-regressions  prop_emit.rs  prop_ids.proptest-regressions  prop_ids.rs  prop_parse.rs  prop_plan.proptest-regressions  prop_plan.rs  prop_refs.rs  prop_resolve.proptest-regressions  prop_resolve.rs  prop_write.proptest-regressions  prop_write.rs  real_world_tests.rs  regression_tests.rs  serialize_import.rs  snapshots.rs  unit.rs
crates/supersigil-js/: Cargo.toml  README.md
crates/supersigil-js/src/: discover.rs  lib.rs
crates/supersigil-lsp/: Cargo.toml  README.md
crates/supersigil-lsp/src/: code_actions.rs  code_lens.rs  commands.rs  completion.rs  definition.rs  diagnostics.rs  document_components.rs  document_list.rs  document_symbols.rs  explorer_runtime.rs  graph_data.rs  hover.rs  lib.rs  main.rs  position.rs  references.rs  rename.rs  state.rs
crates/supersigil-lsp/tests/: code_action_integration.rs  compatibility_info_tests.rs  completion_tests.rs  definition_tests.rs  diagnostics_tests.rs  explorer_runtime_contract_tests.rs  hover_tests.rs  position_tests.rs
crates/supersigil-parser/: Cargo.toml  README.md
crates/supersigil-parser/src/: code_refs.rs  extract.rs  frontmatter.rs  lib.rs  markdown_fences.rs  preprocess.rs  util.rs  xml_extract.rs  xml_parser.rs
crates/supersigil-parser/tests/: fixture_integration_tests.rs  frontmatter_tests.rs  parsing_pipeline_tests.rs  preprocess_tests.rs  property_tests.proptest-regressions  property_tests.rs  unit_tests.rs  validation_tests.rs
crates/supersigil-rust/: Cargo.toml  README.md
crates/supersigil-rust-macros/: Cargo.toml  README.md
crates/supersigil-rust-macros/src/: lib.rs
crates/supersigil-rust/src/: build_support.rs  discover.rs  lib.rs  scope.rs
crates/supersigil-rust/tests/: trybuild.rs
crates/supersigil-verify/: Cargo.toml  README.md
crates/supersigil-verify/src/: affected.rs  artifact_graph.rs  document_components.rs  error.rs  examples.rs  explicit_evidence.rs  explorer_runtime.rs  git.rs  glob_resolver.rs  graph_json.rs  hooks.rs  lib.rs  lib_tests.rs  plugins.rs  report.rs  rule_name.rs  rules.rs  scan.rs  severity.rs  suggest.rs  test_helpers.rs
crates/supersigil-verify/tests/: explorer_runtime_tests.rs  public_api.rs
(+594 files in other folders)
