[workspace]
members = [
    "crates/supersigil-core",
    "crates/supersigil-parser",
    "crates/supersigil-import",
    "crates/supersigil-evidence",
    "crates/supersigil-js",
    "crates/supersigil-rust",
    "crates/supersigil-rust-macros",
    "crates/supersigil-verify",
    "crates/supersigil-cli",
    "crates/supersigil-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonisavo/supersigil"
homepage = "https://supersigil.org"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
yaml_serde = "0.10.4"
toml = "1.0.6"
regex = "1.12.3"
markdown = "1.0.0"
proptest = "1.10.0"
tempfile = "3.27.0"
serde_json = "1.0.149"
supersigil-core = { path = "crates/supersigil-core", version = "=0.11.0" }
supersigil-evidence = { path = "crates/supersigil-evidence", version = "=0.11.0" }
supersigil-js = { path = "crates/supersigil-js", version = "=0.11.0" }
supersigil-rust = { path = "crates/supersigil-rust", version = "=0.11.0" }
supersigil-rust-macros = { path = "crates/supersigil-rust-macros", version = "=0.11.0" }
supersigil-parser = { path = "crates/supersigil-parser", version = "=0.11.0" }
supersigil-import = { path = "crates/supersigil-import", version = "=0.11.0" }
supersigil-verify = { path = "crates/supersigil-verify", version = "=0.11.0" }
supersigil-lsp = { path = "crates/supersigil-lsp", version = "=0.11.0" }
glob = "0.3.3"
strsim = "0.11"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.117", features = ["full"] }
include_dir = "0.7.4"
open = "5.3.3"
quick-xml = "0.39.2"
insta = { version = "1.47.2", features = ["yaml"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
# I'm not sure why, but I get false-positive warnings when I run clippy
# on the whole workspace. No warnings appear when running clippy on individual
# crates.
cargo_common_metadata = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# wasmparser pulls in older hashbrown 0.15.5
multiple_crate_versions = "allow"
