[package]
name = "supersigil-cli"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "supersigil"
path = "src/main.rs"

[lib]
name = "supersigil_cli"
path = "src/lib.rs"

[dependencies]
anstyle = "1.0.14"
clap = { version = "4.6.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
toml.workspace = true
thiserror.workspace = true
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-parser.workspace = true
supersigil-import.workspace = true
supersigil-rust.workspace = true
supersigil-verify.workspace = true
include_dir.workspace = true
open.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
supersigil-verify = { workspace = true, features = ["test-helpers"] }
walkdir = "2.5.0"

[lints]
workspace = true
