[package]
name = "supersigil-core"
version = "0.10.0"
description = "Data model, config loader, and component definitions for the supersigil framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "traceability", "development-tools"]
categories = ["development-tools"]
exclude = ["proptest-regressions/", "specs/"]

[dependencies]
glob.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
yaml_serde.workspace = true

[features]
test-helpers = []

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
