[package]
name = "supersigil-evidence"
version = "0.13.0"
description = "Language-agnostic evidence types for supersigil ecosystem plugins"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "testing", "traceability"]
categories = ["development-tools"]
exclude = ["specs/"]

[dependencies]
serde.workspace = true
supersigil-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
