[package]
name = "supersigil-import"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
insta.workspace = true
supersigil-core.workspace = true
supersigil-parser.workspace = true
supersigil-rust.workspace = true

[lints]
workspace = true
