[package]
name = "supersigil-import"
version = "0.4.0"
description = "Import and convert external spec formats into supersigil documents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "import", "conversion", "verification"]
categories = ["development-tools"]
exclude = ["specs/"]

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
insta.workspace = true
supersigil-core.workspace = true
supersigil-parser.workspace = true
supersigil-rust.workspace = true

[lints]
workspace = true
