[package]
name = "supersigil-js"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-parser.workspace = true
globset = "0.4.18"
ignore = "0.4.25"
oxc_ast = "0.123.0"
oxc_parser = "0.123.0"
oxc_allocator = "0.123.0"
oxc_span = "0.123.0"

[dev-dependencies]
supersigil-rust-macros.workspace = true
tempfile.workspace = true

[lints]
workspace = true
