[package]
name = "supersigil-js"
version = "0.9.0"
description = "JavaScript/TypeScript ecosystem plugin for the supersigil verification framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "javascript", "typescript", "testing"]
categories = ["development-tools"]

[dependencies]
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-parser.workspace = true
oxc_ast = "0.124.0"
oxc_parser = "0.124.0"
oxc_allocator = "0.124.0"
oxc_span = "0.124.0"

[dev-dependencies]
supersigil-rust-macros.workspace = true
tempfile.workspace = true

[lints]
workspace = true
