[package]
name = "supersigil-lsp"
version = "0.10.0"
description = "Language Server Protocol implementation for supersigil spec documents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "lsp", "language-server"]
categories = ["development-tools"]
exclude = ["specs/"]

[[bin]]
name = "supersigil-lsp"
path = "src/main.rs"

[lib]
name = "supersigil_lsp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-lsp = { version = "0.2", features = ["client-monitor", "omni-trait", "stdio", "tracing", "tokio"] }
futures = "0.3"
lsp-types = "0.95"
tower = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-parser.workspace = true
supersigil-rust.workspace = true
supersigil-verify.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.'cfg(all(target_os = "linux", target_env = "gnu"))']
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target-arch }-unknown-linux-musl.tar.gz"

[dev-dependencies]
insta.workspace = true
supersigil-core = { workspace = true, features = ["test-helpers"] }
supersigil-rust-macros.workspace = true
supersigil-verify = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
yaml_serde.workspace = true
