[package]
name = "supersigil-parser"
version = "0.3.0"
description = "Parsing pipeline for supersigil Markdown spec documents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "markdown", "parser", "verification"]
categories = ["development-tools"]
exclude = ["specs/"]

[dependencies]
markdown.workspace = true
quick-xml.workspace = true
supersigil-core.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
