[package]
name = "supersigil-rust-macros"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote = "1.0.45"
supersigil-core.workspace = true
supersigil-parser.workspace = true
syn.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
