[package]
name = "supersigil-rust-macros"
version = "0.14.0"
description = "Proc-macro crate providing the #[verifies(...)] attribute for supersigil"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "proc-macro", "testing"]
categories = ["development-tools"]
exclude = ["specs/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote = "1.0.45"
supersigil-core.workspace = true
supersigil-parser.workspace = true
syn.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
