[package]
name = "supersigil-rust"
version = "0.2.0"
description = "Rust ecosystem plugin for the supersigil verification framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "rust", "testing", "traceability"]
categories = ["development-tools"]
exclude = ["specs/"]

[dependencies]
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-rust-macros.workspace = true
thiserror.workspace = true
glob.workspace = true
proc-macro2.workspace = true
syn.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild = "1.0.116"

[lints]
workspace = true
