[package]
name = "supersigil-verify"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
git2 = "0.20.4"
glob.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-js.workspace = true
supersigil-parser.workspace = true
supersigil-rust.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[features]
test-helpers = ["supersigil-core/test-helpers"]

[dependencies.tempfile]
workspace = true

[dev-dependencies]
proptest.workspace = true
supersigil-core = { path = "../supersigil-core", features = ["test-helpers"] }
supersigil-rust-macros.workspace = true

[lints]
workspace = true
