[package]
name = "supersigil-verify"
version = "0.5.0"
description = "Verification engine for supersigil spec documents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["specification", "verification", "traceability", "testing"]
categories = ["development-tools"]
exclude = ["specs/"]

[dependencies]
git2 = "0.20.4"
glob.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
supersigil-core.workspace = true
supersigil-evidence.workspace = true
supersigil-js.workspace = true
supersigil-parser.workspace = true
supersigil-rust.workspace = true
thiserror.workspace = true

[features]
test-helpers = ["supersigil-core/test-helpers"]
vendored-openssl = ["git2/vendored-openssl"]

[dependencies.tempfile]
workspace = true

[dev-dependencies]
proptest.workspace = true
supersigil-core = { path = "../supersigil-core", features = ["test-helpers"] }
supersigil-rust-macros.workspace = true

[lints]
workspace = true
